--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TIME_ADDITION_MS 
-TIME_SUBTRACTION_MS
-TIME_MULTIPLICATIONS_MS
-TIME_DIVISIONS_MS
+TIME_ADDITION_MS = 2000
+TIME_SUBTRACTION_MS = 2000
+TIME_MULTIPLICATIONS_MS = 3000
+TIME_DIVISIONS_MS = 3000
